--- a/about.html
+++ b/about.html
@@ -63,9 +63,11 @@
                         <li><a class="nav-link active" href="index.html">Home</a></li>
                         <li><a class="nav-link" href="about.html">About</a></li>
                         <li><a class="nav-link" href="courses.html">Courses</a></li>
-                        <li><a class="nav-link" href="reaserch.html">Reaserch</a></li>
+						<li><a class="nav-link" href="lms.html">LM</a></li>
+                        <li><a class="nav-link" href="research.html">Research</a></li>
 						<li><a class="nav-link" href="news.html">News</a></li>
 						<li><a class="nav-link" href="contact.html">Contact us</a></li>
+						<li><a class="nav-link" href="login.html">Login</a></li>
                     </ul>
                 </div>
                 <div class="search-box">
@@ -105,10 +107,11 @@
 						   <h2><span>Welcome To</span> Education</h2>
                         </div>
 						<div class="full">
-						  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-						  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-						  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-						  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+						  <p>Five and half kilometer south of Murcia, Negros Occidental stands a 26,645 square meter wide secondary institution named after its location Cansilayan Farm School.
+							Cansilayan FS is among the 26 pioneering schools in the Region VI and the only school in the Division of Negros Occidental to implement the farm School program.
+							Having granted government recognition last June 18, 2021 under the Government Recognition RO VI No. FS-07, s. 2021, then Canislayan National High School transition
+							to Cansilayan Farm School introducing the Farm School Curriculum along with the Senior High School  Science Technology Engineering, Technology and Livelihoood Education and Inclusive Education.
+							Today its enrolment increase to 107 students from Grade 7- Grade 12 (Senior High School) and there are 37 Teaching and 5 non-teaching personnel administered by Mrs. Loini A. Torrecation Principal 1, the 6th school head since 2019.</p>
 						</div>
 						<div class="full">
 						   <a class="hvr-radial-out button-theme" href="#">About more</a>
@@ -127,7 +130,7 @@
 	<!-- section -->
     <div class="section layout_padding">
         <div class="container">
-            <div class="row">
+        <div class="row">
                 <div class="col-md-12">
                     <div class="full">
                         <div class="heading_main text_align_center">
@@ -138,19 +141,49 @@
 				<div class="col-md-4">
                     <div class="full blog_img_popular">
                        <img class="img-responsive" src="images/p1.png" alt="#" /> 
-					   <h4>Financial Accounting</h4>
+					   <h4>Grade 7 to Grade 10 Regular</h4>
                     </div>
                 </div>
 				<div class="col-md-4">
                     <div class="full blog_img_popular">
                         <img class="img-responsive" src="images/p2.png" alt="#" />
-						<h4>Managerial Accounting</h4>
+						<h4>Inclusive Education</h4>
                     </div>
                 </div>
 				<div class="col-md-4">
                     <div class="full blog_img_popular">
                         <img class="img-responsive" src="images/p3.png" alt="#" />
-						<h4>Intermediate Accounting</h4>
+						<h4>Farm School</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>STE</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>STEM</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>CSS NCII</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>OAP NCII</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>Beauty Care NCII</h4>
                     </div>
                 </div>
             </div>
