--- a/courses.html
+++ b/courses.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Site Metas -->
-    <title>Contact</title>
+    <title>Perfect - Responsive HTML5 Template</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -88,7 +88,7 @@
 	      <div class="row">
 		      <div class="col-12">
 			     <div class="full">
-				     <h3>Contact us</h3>
+				     <h3>Courses</h3>
 				 </div>
 			  </div>
 		  </div>
@@ -98,40 +98,97 @@
 	<!-- end section -->
    
 	<!-- section -->
-    <div class="section layout_padding contact_section" style="background:#f6f6f6;">
+    <div class="section margin-top_50">
         <div class="container">
-               <div class="row">
-                 <div class="col-lg-8 col-md-8 col-sm-12">
-				    <div class="full float-right_img">
-                        <img src="images/img10.png" alt="#">
+            <div class="row">
+                <div class="col-md-6 layout_padding_2">
+                    <div class="full">
+                        <div class="heading_main text_align_left">
+						   <h2><span>Welcome To</span> Education</h2>
+                        </div>
+						<div class="full">
+						  <p>Five and half kilometer south of Murcia, Negros Occidental stands a 26,645 square meter wide secondary institution named after its location Cansilayan Farm School.
+							Cansilayan FS is among the 26 pioneering schools in the Region VI and the only school in the Division of Negros Occidental to implement the farm School program.
+							Having granted government recognition last June 18, 2021 under the Government Recognition RO VI No. FS-07, s. 2021, then Canislayan National High School transition
+							to Cansilayan Farm School introducing the Farm School Curriculum along with the Senior High School  Science Technology Engineering, Technology and Livelihoood Education and Inclusive Education.
+							Today its enrolment increase to 107 students from Grade 7- Grade 12 (Senior High School) and there are 37 Teaching and 5 non-teaching personnel administered by Mrs. Loini A. Torrecation Principal 1, the 6th school head since 2019.</p>
+						</div>
+						<div class="full">
+						   <a class="hvr-radial-out button-theme" href="#">About more</a>
+						</div>
                     </div>
-                 </div>
-				 <div class="col-lg-4 col-md-4 col-sm-12">
-				    <div class="contact_form">
-					    <form action="contact.html">
-						   <fieldset>
-						       <div class="full field">
-							      <input type="text" placeholder="Your Name" name="your name" />
-							   </div>
-							   <div class="full field">
-							      <input type="email" placeholder="Email Address" name="Email" />
-							   </div>
-							   <div class="full field">
-							      <input type="phn" placeholder="Phone Number" name="Phone number" />
-							   </div>
-							   <div class="full field">
-							      <textarea placeholder="Massage"></textarea>
-							   </div>
-							   <div class="full field">
-							      <div class="center"><button>Send</button></div>
-							   </div>
-						   </fieldset>
-						</form>
-					</div>
-                 </div>
-               </div>			  
-           </div>
+                </div>
+				<div class="col-md-6">
+                    <div class="full">
+                        <img src="images/img2.png" alt="#" />
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+	<!-- end section -->
+	<!-- section -->
+    <div class="section layout_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="full">
+                        <div class="heading_main text_align_center">
+						   <h2><span>Popular </span>Courses</h2>
+                        </div>
+					  </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                       <img class="img-responsive" src="images/p1.png" alt="#" /> 
+					   <h4>Grade 7 to Grade 10 Regular</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p2.png" alt="#" />
+						<h4>Inclusive Education</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>Farm School</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>STE</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>STEM</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>CSS NCII</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>OAP NCII</h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+                        <img class="img-responsive" src="images/p3.png" alt="#" />
+						<h4>Beauty Care NCII</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 	<!-- end section -->
     <!-- Start Footer -->
     <footer class="footer-box">
@@ -145,8 +202,8 @@
 					   <img src="images/footer_logo.png" alt="#" />
 					 </div>
 					 <div class="full white_fonts">
-					    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip </p>
+					   <p>Pagsabwag sang kaalam kag pagpasanyog sang abilidad sa Agrikultura para sa Batang NEGROSANON nga mangin 
+						KAMPEON, ABANSE NEGRENSE!  </p>
 					 </div>
 				 </div>
 			  </div>
@@ -155,11 +212,9 @@
 			       <div class="footer_blog footer_menu white_fonts">
 						    <h3>Quick links</h3>
 						    <ul> 
-							  <li><a href="#">> Join Us</a></li>
-							  <li><a href="#">> Maintenance</a></li>
-							  <li><a href="#">> Language Packs</a></li>
-							  <li><a href="#">> LearnPress</a></li>
-							  <li><a href="#">> Release Status</a></li>
+								<li><a href="lms.html">> School LMS</a></li>
+								<li><a href="https://www.facebook.com/CNHSPage">> Facebook Page</a></li>
+								<li><a href="https://www.facebook.com/TheCansilights">> School Publication</a></li>
 							</ul>
 						 </div>
 				 </div>
@@ -167,7 +222,7 @@
 				 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
 				 <div class="footer_blog full white_fonts">
 						     <h3>Newsletter</h3>
-							 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+								<p>If you have any concerns contact us.</p>
 							 <div class="newsletter_form">
 							    <form action="index.html">
 								   <input type="email" placeholder="Your Email" name="#" required />
@@ -181,9 +236,9 @@
 				 <div class="footer_blog full white_fonts">
 						     <h3>Contact us</h3>
 							 <ul class="full">
-							   <li><img src="images/i5.png"><span>London 145<br>United Kingdom</span></li>
-							   <li><img src="images/i6.png"><span>demo@gmail.com</span></li>
-							   <li><img src="images/i7.png"><span>+12586954775</span></li>
+							    <li><img src="images/i5.png"><span>Brgy Cansilayan<br>Murcia, Negros Occidental</span></li>
+							    <li><img src="images/i6.png"><span>302609@deped.gov.ph  cansilayannhs@gmail.com</span></li>
+							    <li><img src="images/i7.png"><span>+63 (034)-431 3784 </span></li>
 							 </ul>
 						 </div>
 					</div>	 
@@ -198,7 +253,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <p class="crp">© Copyrights 2019 design by html.design</p>
+                    <p class="crp">© Copyrights 2022 design by Julius Dolloso</p>
                 </div>
             </div>
         </div>
