--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                         <li><a class="nav-link active" href="index.html">Home</a></li>
                         <li><a class="nav-link" href="about.html">About</a></li>
                         <li><a class="nav-link" href="courses.html">Courses</a></li>
-                        <li><a class="nav-link" href="reaserch.html">Reaserch</a></li>
+						<li><a class="nav-link" href="lms.html">LM</a></li>
+                        <li><a class="nav-link" href="research.html">Research</a></li>
 						<li><a class="nav-link" href="news.html">News</a></li>
 						<li><a class="nav-link" href="contact.html">Contact us</a></li>
 						<li><a class="nav-link" href="login.html">Login</a></li>
@@ -90,8 +91,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="slide_text">
-                                        <h3><span span class="theme_color">You only have know one thing</span><br>you can learn anything</h3>
-                                        <h4>Free Educations</h4>
+                                        <h3><span span class="theme_color">FARM SCHOOL CHAMPION</span><br>CANSILAYAN FARM SCHOOL</h3>
+                                        <h4>SDO NEGROS OCCIDENTAL</h4>
                                         <br>
                                         <div class="full center">
 										    <a class="contact_bt" href="courses.html">Enroll Now</a>
@@ -106,8 +107,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="slide_text">
-                                        <h3><span span class="theme_color">You only have know one thing</span><br>you can learn anything</h3>
-                                        <h4>Free Educations</h4>
+                                        <h3><span span class="theme_color">FARM SCHOOL CHAMPION</span><br>CANSILAYAN FARM SCHOOL</h3>
+                                        <h4>REGION VI - WESTERN VISAYAS</h4>
                                         <br>
                                         <div class="full center">
 										    <a class="contact_bt" href="courses.html">Start a Course</a>
@@ -128,7 +129,7 @@
 	   <div class="container">
 	      <div class="row">
 		      <div class="col-md-12">
-			     <div class="tab_menu">
+			    <div class="tab_menu">
 				    <ul>
 					   <li><a href="#"><span class="icon"><img src="images/i1.png" alt="#" /></span><span>High School Life</span></a></li>
 					   <li><a href="#"><span class="icon"><img src="images/i2.png" alt="#" /></span><span>Graduation</span></a></li>
@@ -150,11 +151,15 @@
             <div class="row">
                 <div class="col-md-6 layout_padding_2">
                     <div class="full">
-                        <div class="heading_main text_align_left">
+					    <div class="heading_main text_align_left">
 						   <h2><span>Welcome To</span> Cansilayan Farm School</h2>
                         </div>
 						<div class="full">
-						  <p>Cansilayan Farm School . . . . . . . .. </p>
+						  <p>Five and half kilometer south of Murcia, Negros Occidental stands a 26,645 square meter wide secondary institution named after its location Cansilayan Farm School.
+							Cansilayan FS is among the 26 pioneering schools in the Region VI and the only school in the Division of Negros Occidental to implement the farm School program.
+							Having granted government recognition last June 18, 2021 under the Government Recognition RO VI No. FS-07, s. 2021, then Canislayan National High School transition
+							to Cansilayan Farm School introducing the Farm School Curriculum along with the Senior High School  Science Technology Engineering, Technology and Livelihoood Education and Inclusive Education.
+							Today its enrolment increase to 107 students from Grade 7- Grade 12 (Senior High School) and there are 37 Teaching and 5 non-teaching personnel administered by Mrs. Loini A. Torrecation Principal 1, the 6th school head since 2019.</p>
 						</div>
 						<div class="full">
 						   <a class="hvr-radial-out button-theme" href="#">About more</a>
@@ -171,6 +176,7 @@
     </div>
 	<!-- end section -->
 	<!-- section -->
+	
     <div class="section layout_padding">
         <div class="container">
             <div class="row">
@@ -202,19 +208,19 @@
 				<div class="col-md-4">
                     <div class="full blog_img_popular">
                         <img class="img-responsive" src="images/p3.png" alt="#" />
-						<h4>Science Technology Engineering</h4>
+						<h4>STE</h4>
                     </div>
                 </div>
 				<div class="col-md-4">
                     <div class="full blog_img_popular">
                         <img class="img-responsive" src="images/p3.png" alt="#" />
-						<h4>Science, Technology, Engineering and Mathematics</h4>
+						<h4>STEM</h4>
                     </div>
                 </div>
 				<div class="col-md-4">
                     <div class="full blog_img_popular">
                         <img class="img-responsive" src="images/p3.png" alt="#" />
-						<h4>Computer Systems Servicing NCII</h4>
+						<h4>CSS NCII</h4>
                     </div>
                 </div>
 				<div class="col-md-4">
@@ -248,10 +254,7 @@
 						   <h2><span>Apply for Admission</h2>
                         </div>
 						<div class="full">
-						  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-						  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor 
-						  in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-						  sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+						  <p>We are now accepting early Registration for Senior High School students for second semester.</p>
 						</div>
 						<div class="full">
 						   <a class="hvr-radial-out button-theme" href="#">Apply</a>
@@ -269,12 +272,10 @@
                 <div class="col-md-6">
                     <div class="full">
                         <div class="heading_main text_align_left">
-						   <h2><span>Reaserch</span></h2>
+						   <h2><span>Research</span></h2>
                         </div>
 						<div class="full">
-						  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-						  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-						  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+						  <p>Approved and Implemented Action Researches and Innovations.</p>
 						</div>
 						<div class="full">
 						   <a class="hvr-radial-out button-theme" href="#">See More</a>
@@ -314,14 +315,14 @@
 									   <div class="full blog_img_popular">
                                           <img class="img-responsive" src="images/img9.png" alt="#" />
 										  <h4>Technology</h4>
-										  <p>Pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+										  <p>Cansilayan Farm School has a Computer room with 20 Desktops Computers.</p>
 										</div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12">
                                         <div class="full blog_img_popular">
                                           <img class="img-responsive" src="images/img8.png" alt="#" />
 										  <h4>Education</h4>
-										  <p>Pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+										  <p>The school has received several awards and Recognitions from the Division Office and the Regional Office.</p>
 										</div>
                                     </div>
                                 </div>
@@ -332,14 +333,14 @@
 									   <div class="full blog_img_popular">
                                           <img class="img-responsive" src="images/img9.png" alt="#" />
 										  <h4>Technology</h4>
-										  <p>Pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+										  <p>Cansilayan Farm School has a Computer room with 20 Desktops Computers.</p>
 										</div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12">
                                         <div class="full blog_img_popular">
                                           <img class="img-responsive" src="images/img8.png" alt="#" />
 										  <h4>Education</h4>
-										  <p>Pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+										  <p>The school has received several awards and Recognitions from the Division Office and the Regional Office.</p>
 										</div>
                                     </div>
                                 </div>
@@ -377,7 +378,7 @@
         </div>
 	<!-- end section -->
 	<!-- section -->
-    <div class="section contact_section" style="background:#12385b;">
+    <div class="section contact_section" style="background:#00b33c;">
         <div class="container">
                <div class="row">
                  <div class="col-lg-6 col-md-6 col-sm-12">
@@ -424,8 +425,8 @@
 					   <img src="images/footer_logo.png" alt="#" />
 					 </div>
 					 <div class="full white_fonts">
-					    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip </p>
+					    <p>Pagsabwag sang kaalam kag pagpasanyog sang abilidad sa Agrikultura para sa Batang NEGROSANON nga mangin 
+						KAMPEON, ABANSE NEGRENSE!  </p>
 					 </div>
 				 </div>
 			  </div>
@@ -434,11 +435,9 @@
 			       <div class="footer_blog footer_menu white_fonts">
 						    <h3>Quick links</h3>
 						    <ul> 
-							  <li><a href="#">> Join Us</a></li>
-							  <li><a href="#">> Maintenance</a></li>
-							  <li><a href="#">> Language Packs</a></li>
-							  <li><a href="#">> LearnPress</a></li>
-							  <li><a href="#">> Release Status</a></li>
+							  <li><a href="lms.html">> School LMS</a></li>
+							  <li><a href="https://www.facebook.com/CNHSPage">> Facebook Page</a></li>
+							  <li><a href="https://www.facebook.com/TheCansilights">> School Publication</a></li>
 							</ul>
 						 </div>
 				 </div>
@@ -446,7 +445,7 @@
 				 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
 				 <div class="footer_blog full white_fonts">
 						     <h3>Newsletter</h3>
-							 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+							 <p>If you have any concerns contact us.</p>
 							 <div class="newsletter_form">
 							    <form action="index.html">
 								   <input type="email" placeholder="Your Email" name="#" required />
@@ -460,9 +459,9 @@
 				 <div class="footer_blog full white_fonts">
 						     <h3>Contact us</h3>
 							 <ul class="full">
-							   <li><img src="images/i5.png"><span>London 145<br>United Kingdom</span></li>
-							   <li><img src="images/i6.png"><span>demo@gmail.com</span></li>
-							   <li><img src="images/i7.png"><span>+12586954775</span></li>
+							   <li><img src="images/i5.png"><span>Brgy Cansilayan<br>Murcia, Negros Occidental</span></li>
+							   <li><img src="images/i6.png"><span>302609@deped.gov.ph  cansilayannhs@gmail.com</span></li>
+							   <li><img src="images/i7.png"><span>+63 (034)-431 3784 </span></li>
 							 </ul>
 						 </div>
 					</div>	 
@@ -472,12 +471,12 @@
         </div>
     </footer>
     <!-- End Footer -->
-
+ 
     <div class="footer_bottom">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <p class="crp">© Copyrights 2019 design by html.design</p>
+                    <p class="crp">© Copyrights 2022 design by Julius Dolloso</p>
                 </div>
             </div>
         </div>
@@ -485,10 +484,12 @@
 
     <a href="#" id="scroll-to-top" class="hvr-radial-out"><i class="fa fa-angle-up"></i></a>
 
+
     <!-- ALL JS FILES -->
     <script src="js/jquery.min.js"></script>
 	<script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+	
     <!-- ALL PLUGINS -->
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/jquery.pogo-slider.min.js"></script>
