--- a/research.html
+++ b/research.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Site Metas -->
-    <title>Contact</title>
+    <title>Learning Materials</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -80,59 +80,50 @@
         </nav>
     </header>
     <!-- End header -->
-
 	<!-- section -->
-	
 	<section class="inner_banner">
 	  <div class="container">
 	      <div class="row">
 		      <div class="col-12">
 			     <div class="full">
-				     <h3>Contact us</h3>
+				     <h3>Resources	</h3>
 				 </div>
 			  </div>
 		  </div>
 	  </div>
 	</section>
-	
 	<!-- end section -->
-   
 	<!-- section -->
-    <div class="section layout_padding contact_section" style="background:#f6f6f6;">
+    <div class="section layout_padding">
         <div class="container">
-               <div class="row">
-                 <div class="col-lg-8 col-md-8 col-sm-12">
-				    <div class="full float-right_img">
-                        <img src="images/img10.png" alt="#">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="full">
+                        <div class="heading_main text_align_center">
+						   <h2><span>Downloadable </span>Materials</h2>
+                        </div>
+					  </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+					   <h4><a href="">Grade 7 TLE</a></h4>            
                     </div>
-                 </div>
-				 <div class="col-lg-4 col-md-4 col-sm-12">
-				    <div class="contact_form">
-					    <form action="contact.html">
-						   <fieldset>
-						       <div class="full field">
-							      <input type="text" placeholder="Your Name" name="your name" />
-							   </div>
-							   <div class="full field">
-							      <input type="email" placeholder="Email Address" name="Email" />
-							   </div>
-							   <div class="full field">
-							      <input type="phn" placeholder="Phone Number" name="Phone number" />
-							   </div>
-							   <div class="full field">
-							      <textarea placeholder="Massage"></textarea>
-							   </div>
-							   <div class="full field">
-							      <div class="center"><button>Send</button></div>
-							   </div>
-						   </fieldset>
-						</form>
-					</div>
-                 </div>
-               </div>			  
-           </div>
+					 <div class="full blog_img_popular">
+					   <h4><a href="">Grade 7 Mathematics</a></h4>
+                    </div>
+					 <div class="full blog_img_popular">
+					   <h4><a href="">Grade 7 Araling Panlipunan</a></h4>
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="full blog_img_popular">
+						<h4><a href="">Grade 8 Farm School</a></h4>
+                    </div>
+                </div>
+            </div>
         </div>
-	<!-- end section -->
+    </div>
+	<!-- end section -->   
     <!-- Start Footer -->
     <footer class="footer-box">
         <div class="container">
@@ -145,8 +136,8 @@
 					   <img src="images/footer_logo.png" alt="#" />
 					 </div>
 					 <div class="full white_fonts">
-					    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip </p>
+					    <p>Pagsabwag sang kaalam kag pagpasanyog sang abilidad sa Agrikultura para sa Batang NEGROSANON nga mangin 
+						KAMPEON, ABANSE NEGRENSE!  </p>
 					 </div>
 				 </div>
 			  </div>
@@ -155,11 +146,9 @@
 			       <div class="footer_blog footer_menu white_fonts">
 						    <h3>Quick links</h3>
 						    <ul> 
-							  <li><a href="#">> Join Us</a></li>
-							  <li><a href="#">> Maintenance</a></li>
-							  <li><a href="#">> Language Packs</a></li>
-							  <li><a href="#">> LearnPress</a></li>
-							  <li><a href="#">> Release Status</a></li>
+							    <li><a href="lms.html">> School LMS</a></li>
+								<li><a href="https://www.facebook.com/CNHSPage">> Facebook Page</a></li>
+								<li><a href="https://www.facebook.com/TheCansilights">> School Publication</a></li>
 							</ul>
 						 </div>
 				 </div>
@@ -167,7 +156,7 @@
 				 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
 				 <div class="footer_blog full white_fonts">
 						     <h3>Newsletter</h3>
-							 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+							 <p>If you have any concerns contact us.</p>
 							 <div class="newsletter_form">
 							    <form action="index.html">
 								   <input type="email" placeholder="Your Email" name="#" required />
@@ -181,9 +170,9 @@
 				 <div class="footer_blog full white_fonts">
 						     <h3>Contact us</h3>
 							 <ul class="full">
-							   <li><img src="images/i5.png"><span>London 145<br>United Kingdom</span></li>
-							   <li><img src="images/i6.png"><span>demo@gmail.com</span></li>
-							   <li><img src="images/i7.png"><span>+12586954775</span></li>
+							    <li><img src="images/i5.png"><span>Brgy Cansilayan<br>Murcia, Negros Occidental</span></li>
+							    <li><img src="images/i6.png"><span>302609@deped.gov.ph  cansilayannhs@gmail.com</span></li>
+							    <li><img src="images/i7.png"><span>+63 (034)-431 3784 </span></li>
 							 </ul>
 						 </div>
 					</div>	 
@@ -198,7 +187,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <p class="crp">© Copyrights 2019 design by html.design</p>
+                    <p class="crp">© Copyrights 2022 design by Julius Dolloso</p>
                 </div>
             </div>
         </div>
